src/test/resources/io/github/tt432/eyelib/molang/compiler/corpus/phase1/invalid-parse-golden/malformed-parse-golden.molangcase
---
id: invalid.parse-golden.malformed
layer: internal
evidence: internal
assertions:
  - parse-accept
---
math.sin(query.anim_time)
